Update on August 2024

--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         </div>
         <div class="col-lg-8 mx-auto">
           <p class="text-faded text-white mb-5">
-            I like Mathematics since I was a kid and take Informatics Major 
-            because it also can be called as "Applied Mathematics". I enjoy learning about data, analyzing it, and making people understand it as well. 
-            I am a detailed, logical, observant, problem-solver person, and also like learning new various things inside or outside of my major. 
+            Born in Q4 1999. I like Mathematics since I was a kid and take Informatics Major 
+            because it also can be called as "Applied Mathematics".  I enjoy learning about data, solving the problem, thinking logically, and presenting or teaching of my works to other people. 
+            The most unique trait about me is I really like create and finish my self-project either do it alone or with team. Not only inside my major, I also like learning new various things outside of my major.
           </p>
           <p class="text-italic text-white font-weight-bold mb-5">
-            Area of Expertise: Data Science and Data Analytics <br>
-            (including Machine Learning, Data Visualization, and so on)</p>
+            Area of Expertise: Software Engineer and Data Science <br>
+            (including Data Analytics, Machine Learning, Data Visualization, and so on)</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More!</a>
         </div>
       </div>
@@ -291,7 +291,7 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 2</div>
-                <div class="project-name">Predict whether customers at a car dealership are interested in buying a new car or not with Decision Tree</div>
+                <div class="project-name">Predict whether customers at a car dealership are interested in buying a new car or not with Decision Tree (Honored as Best Presentation)</div>
               </div>
             </div>
           </a>
@@ -303,7 +303,7 @@
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">Top 1</div>
-                <div class="project-name">Identification of Lung Cancer in Smoker Person Using Ensemble Methods Based on Gene Expression Data</div>
+                <div class="project-name">Identification of Lung Cancer in Smoker Person Using Ensemble Methods Based on Gene Expression Data (Published in IEEE and Presented in International Conference)</div>
               </div>
             </div>
           </a>
@@ -329,12 +329,12 @@
           <h2 class="section-heading text-white" id="deployment">Deployment</h2>
 					<hr class="divider light my-4" />
         </div>
-        <h3 style="font-size: 16px;">
-          <div class="text-white text-center">
-            You can see some of my (or our) deployments on online website.
-          </div>
-        </h3>
       </div>
+      <h3 style="font-size: 16px;">
+        <div class="text-white text-center">
+          You can see some of my (or our) deployments on online website.
+        </div>
+      </h3>
     </div>
 
     <div class="container-fluid p-0"> 
@@ -348,6 +348,18 @@
               <div class="portfolio-box-caption-content">
                 <!-- <div class="project-category text-faded">Deployed on Github Pages</div> -->
                 <div class="project-name">Peta Kebijakan</div>
+              </div>
+            </div>
+          </a>
+        </div>
+
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box" href="https://otnielabiezer.com/Gempabumi">
+            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/gempabumi.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="portfolio-box-caption-content">
+                <!-- <div class="project-category text-faded">Deployed on Railway</div> -->
+                <div class="project-name">Gempabumi</div>
               </div>
             </div>
           </a>
@@ -391,18 +403,6 @@
         </div>
 
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#">
-            <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <!-- <div class="project-category text-faded">Deployed on Railway</div> -->
-                <div class="project-name">Coming Soon</div>
-              </div>
-            </div>
-          </a>
-        </div>
-
-        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="#">            
             <img class="img-responsive border border-dark" width="100%" height="auto" src="img/portfolio/thumbnails/deploy.jpg" alt="">
             <div class="portfolio-box-caption">
@@ -421,7 +421,7 @@
   <br>
       <div class="text-center">
         <a class="btn btn-black btn-xl js-scroll-trigger" href="#publication">
-        Scientific Publication</a>
+        Academic Publication</a>
       </div>
   </section>
 
